<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Symptoms Checker</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Symptoms Checker</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Create New Account</string>
    <string name="about_us">Learn more about the product ></string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_about">About Symptom Checker</string>
    <string name="activity_account">My Account</string>
    <string name="activity_history">History</string>
    <string name="activity_logout">Logout</string>
    <string name="activity_about">The Symptom Checker app comes from medical professionals who have elaborated the complex dependencies between symptoms into a single decision making app. Symptoms Checker knows what questions to ask and when.\n\nTo get started, please enter basic information about yourself along with a history of medical conditions experienced in the past.\n\nTo learn more information visit us at http://zdrav.kz</string>
    <string name="coryright">All right reserved by GTNet</string>
    <string name="title_activity_select_symptom">Select Symptom</string>
    <string name="title_activity_profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit">Edit</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="dob">DOB</string>
    <string name="dob_select">Select Date</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm</string>
    <string name="medical_records">Medical Records</string>
    <string name="title_activity_profile_edit">Profile Edit</string>
    <string name="submit">Done</string>
    <string name="dummy_1">John</string>
    <string name="dummy_2">Smith</string>
    <string name="dummy_3">jsmith@email.com</string>
    <string name="dummy_4">Male</string>
    <string name="dummy_5">26 July 1987</string>
    <string name="dummy_6">6\' 11"</string>
    <string name="dummy_7">200 lbs</string>
    <string name="title_activity_symptoms_history">Symptoms History</string>
    <string name="dummy8">1. Cold - 85%</string>
    <string name="dummy9">10/11/2013</string>
    <string name="dummy10">2. Allergy - 77%</string>
    <string name="dummy11">09/12/2013</string>
    <string name="dummy12">3. Influenza - 60%</string>
    <string name="dummy13">09/05/2013</string>
    <string name="dummy14">4. Cold - 90%</string>
    <string name="dummy15">08/25/2013</string>
    <string name="dummy16">fill in your data</string>
    <string name="clear_history">Clear History</string>
    <string name="select_all">Select All</string>
    <string name="clear_all">Deselect All</string>
    <string name="title_activity_symptoms_history_edit">Edit History</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="select_symptom">Please select a symptom:</string>
    <string name="next">Next ></string>
    <string name="title_activity_select_symptom_next">Select Next Symptom</string>
    <string name="dummy17">Please describe your problem:</string>
    <string name="dummy18">Headache</string>
    <string name="dummy19">Dizziness</string>
    <string name="dummy20">Pressure</string>
    <string name="dummy21">Eye Pain</string>
    <string name="dummy22">Do you have temperature?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_select_symptom_next_next">Select Next Symptom</string>
    <string name="title_activity_results">Results</string>
    <string name="dummy23">There is 80% chance that you have: \'Cold\'</string>
    <string name="recommendations">Recommendations</string>
    <string name="specialists">Find Doctors</string>
    <string name="emergency">Call the Emergency!</string>
    <string name="next_step">What do you want to do next?</string>
    <string name="title_activity_recommendations">Recommendations</string>
    <string name="dummy24">1. Drink hot drinks</string>
    <string name="dummy25">2. Dress in layers</string>
    <string name="dummy26">3. Keep you feet dry and warm</string>
    <string name="dummy27">4. Take a shot of vodka with red pepper if you are over 21</string>
    <string name="recommendations_tip">Our tips:</string>
    <string name="title_activity_specialists">Specialists</string>
    <string name="specialists_tip">Get consulting from:</string>
    <string name="dummy28">1. Physician</string>
    <string name="dummy29">2. Epidemiologist</string>
    <string name="title_activity_emergency">Emergency</string>
    <string name="warning_title">Emergency Call</string>
    <string name="warning_message_1">Nearest emergency facilitiy:</string>
    <string name="warning_message_2">Would you like to call?</string>
    <string name="title_activity_header">HeaderActivity</string>
    <string name="activity_home">Home</string>
    <string name="title_activity_asd">Asd</string>
    <string name="v_pass_not_match">Passwords don\'t match</string>
    <string name="v_record_created">Record created</string>
    <string name="v_record_updated">Record updated</string>
    <string name="v_auth_failed">Authentication failed</string>
    <string name="v_auth_success">Authentication success</string>
    <string name="back">Back</string>
    <string name="title_activity_symptom_drawer">SymptomDrawer</string>
    <string name="notification_select_symptom">Touch picture to select are you are concerned with</string>
    <string name="drawer_title">Please select area of concern</string>
    <string name="remove">Delete</string>
    <string name="history_message">Click items to edit</string>
    <string name="history_empty">No records found</string>
    <string name="recommendation_title_cause">Possible Cause:</string>
    <string name="recommendation_title_tip">Recommendation:</string>
    <string name="emerg_call">Call Emergency</string>
    <string name="share">Share</string>
    <string name="share_subject">Check this out</string>
    <string name="no_location">Could not retrieve your location</string>
    
    
    
</resources>