<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Profile" >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/TableColH"
                        android:text="@string/first_name" />

                    <TextView
                        android:id="@+id/profile_firstname"
                        style="@style/TableCol" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/TableColH"
                        android:text="@string/last_name" />

                    <TextView
                        android:id="@+id/profile_lastname"
                        style="@style/TableCol" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/TableColH"
                        android:text="@string/email" />

                    <TextView
                        android:id="@+id/profile_email"
                        style="@style/TableCol" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/TableColH"
                        android:text="@string/gender" />

                    <TextView
                        android:id="@+id/profile_gender"
                        style="@style/TableCol" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/TableColH"
                        android:text="@string/dob" />

                    <TextView
                        android:id="@+id/profile_dob"
                        style="@style/TableCol" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/TableColH"
                        android:text="@string/height" />

                    <TextView
                        android:id="@+id/profile_height"
                        style="@style/TableCol" />
                </TableRow>

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <TextView
                        style="@style/TableColH"
                        android:text="@string/weight" />

                    <TextView
                        android:id="@+id/profile_weight"
                        style="@style/TableCol" />
                </TableRow>
            </TableLayout>

            <Button
                android:id="@+id/profile_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/spacer_xs"
                android:onClick="@layout/activity_about"
                android:text="@string/edit_profile" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>